sgd/reproduction/playground/objects/SVMXC__Service_Order__c.object
<CustomObject>
    <fields>
        <fullName>SVMXC__Drip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate whether the Work Order is ready to be delivered to mobile application</description>
        <inlineHelpText>Flag to indicate whether the Work Order is ready to be delivered to mobile application</inlineHelpText>
        <label>Drip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Driving_Time__c</fullName>
        <label>Driving Time (in Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__EndpointURL__c</fullName>
        <description>Not used</description>
        <formula>$Api.Enterprise_Server_URL_70</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndpointURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_Notes__c</fullName>
        <description>Entitlement Notes</description>
        <label>Entitlement Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_Type__c</fullName>
        <label>Entitlement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUTO</fullName>
                </value>
                <value>
                    <fullName>INTERACTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Failed_Assembly__c</fullName>
        <description>The assembly of your product that failed.</description>
        <inlineHelpText>The assembly of your product that failed.</inlineHelpText>
        <label>Failed Assembly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Value1</fullName>
                </value>
                <value>
                    <fullName>Sample Value2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Failure_Location__c</fullName>
        <description>Where the product failed, field or depot</description>
        <inlineHelpText>Where the product failed, field or depot</inlineHelpText>
        <label>Failure Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Floor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Finished_Onsite_Date_Time__c</fullName>
        <description>Date and time when technician finishes working on the work order at site</description>
        <inlineHelpText>Date and time when technician finishes working on the work order at site</inlineHelpText>
        <label>Finished Onsite Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__FirstScheduledDateTime__c</fullName>
        <description>Datetimestamp the work order was scheduled to a technician for the very first time.</description>
        <inlineHelpText>Datetimestamp the work order was scheduled to a technician for the very first time.</inlineHelpText>
        <label>First Scheduled DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__First_Assigned_DateTime__c</fullName>
        <description>Datetimestamp the work order was assigned to a technician for the very first time.</description>
        <inlineHelpText>Datetimestamp the work order was assigned to a technician for the very first time.</inlineHelpText>
        <label>First Assigned DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__First_Queued_DateTime__c</fullName>
        <description>Datetimestamp the work order was queued to a technician for the very first time.</description>
        <inlineHelpText>Datetimestamp the work order was queued to a technician for the very first time.</inlineHelpText>
        <label>First Queued DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Group_Email__c</fullName>
        <description>Stores the email address associated with the service team. Sends email using workflow rule indicating an work order has been queued to the service team.</description>
        <inlineHelpText>Stores the email address associated with the service team. Sends email using workflow rule indicating an work order has been queued to the service team.</inlineHelpText>
        <label>Group Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMXC__Group_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the group member working on the service order. This does not imply that this member has the ownership of service order record</description>
        <inlineHelpText>Name of the group member working on the service order. This does not imply that this member has the ownership of service order record</inlineHelpText>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__How_Fixed__c</fullName>
        <description>Type of fix that was applied to resolve the problem.</description>
        <inlineHelpText>Type of fix that was applied to resolve the problem.</inlineHelpText>
        <label>How Fixed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Value1</fullName>
                </value>
                <value>
                    <fullName>Sample Value2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Idle_Time__c</fullName>
        <description>Idle Time (in Minutes)</description>
        <inlineHelpText>Idle Time (in Minutes)</inlineHelpText>
        <label>Idle Time (in Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Initial_Response_Customer_By__c</fullName>
        <description>Date/time by which initial response should be delivered as per customer commitment in SLA. Calculated automatically</description>
        <label>Initial Response Customer By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Initial_Response_Internal_By__c</fullName>
        <description>Date/time by which customer should be initial responsed as per internal commitment in SLA.</description>
        <inlineHelpText>Date/time by which customer should be initial responsed as per internal commitment in SLA.</inlineHelpText>
        <label>Initial Response Internal By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Invoice_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsPartnerRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates that this work order is for/by a Partner.</description>
        <inlineHelpText>Flag indicates that this work order is for/by a Partner.</inlineHelpText>
        <label>IsPartnerRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsPartner__c</fullName>
        <description>Flag is the indication of Partner Record.</description>
        <formula>IF(  SVMXC__IsPartnerRecord__c  ,&quot;True&quot;, &quot;False&quot;)</formula>
        <inlineHelpText>Flag is the indication of Partner Record.</inlineHelpText>
        <label>Is Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Entitlement_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Entitlement Performed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Exported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate whether this record is exported.</description>
        <label>Is Exported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_PM_Work_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is a preventive maintenance work order or not. Set automatically by PM scheduler</description>
        <label>Is PM Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_SLA_Calculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Service_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Service Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Last_Dispatch_Event__c</fullName>
        <description>Indicates various stages of an work order. Used to trigger various dispatch console workflows.</description>
        <inlineHelpText>Indicates various stages of an work order. Used to trigger various dispatch console workflows.</inlineHelpText>
        <label>Last Dispatch Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Worked</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>UnQueued</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>UnScheduled</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>UnAssigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude__c</fullName>
        <description>Latitude for the work order service location</description>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Locked_By_DC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Locked By DC</description>
        <inlineHelpText>Locked By DC</inlineHelpText>
        <label>Locked By DC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude__c</fullName>
        <description>Longitude for the work order service location</description>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Master_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Order Line</label>
        <referenceTo>SVMXC__RMA_Shipment_Line__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Member_Email__c</fullName>
        <description>Stores the email address of the technician. Used to send a email through workflow rule indicating an work order has been assigned/scheduled.</description>
        <inlineHelpText>Stores the email address of the technician. Used to send a email through workflow rule indicating an work order has been assigned/scheduled.</inlineHelpText>
        <label>Member Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMXC__NoOfTimesAssigned__c</fullName>
        <description>Indicating number of times the work order was assigned</description>
        <inlineHelpText>Indicating number of times the work order was assigned</inlineHelpText>
        <label>No Of Times Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__NoOfTimesQueued__c</fullName>
        <description>Indicates number of times the work order was queued</description>
        <inlineHelpText>Indicates number of times the work order was queued</inlineHelpText>
        <label>No Of Times Queued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__NoOfTimesScheduled__c</fullName>
        <description>Indicates number of times the work order was scheduled</description>
        <inlineHelpText>Indicates number of times the work order was scheduled</inlineHelpText>
        <label>No Of Times Scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Number_Of_Times_Assigned_Bucket__c</fullName>
        <description>Number of times the work order was assigned bucket. This is used for reporting purpose.</description>
        <formula>IF ( SVMXC__NoOfTimesAssigned__c &lt;=2, &quot;Less Than 2 Times&quot;, IF ( SVMXC__NoOfTimesAssigned__c &lt;= 6, &quot;2 To 6 Times&quot;, IF ( SVMXC__NoOfTimesAssigned__c &lt;= 10, &quot;6 to 10 Times&quot;, &quot;Over 10 Times&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of times the work order was assigned bucket. This is used for reporting purpose.</inlineHelpText>
        <label>Number Of Times Assigned Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Number_Of_Times_Queued_Bucket__c</fullName>
        <description>Number of times the work order was queued bucket. This is used for reporting purpose.</description>
        <formula>IF ( SVMXC__NoOfTimesQueued__c &lt;=2, &quot;Less Than 2 Times&quot;, IF ( SVMXC__NoOfTimesQueued__c &lt;= 6, &quot;2 To 6 Times&quot;, IF ( SVMXC__NoOfTimesQueued__c &lt;= 10, &quot;6 to 10 Times&quot;, &quot;Over 10 Times&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of times the work order was queued bucket. This is used for reporting purpose.</inlineHelpText>
        <label>Number Of Times Queued Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Number_Of_Times_Scheduled_Bucket__c</fullName>
        <description>Number of times the work order was scheduled bucket. This is used for reporting purpose.</description>
        <formula>IF ( SVMXC__NoOfTimesScheduled__c &lt;=2, &quot;Less Than 2 Times&quot;, IF ( SVMXC__NoOfTimesScheduled__c &lt;= 6, &quot;2 To 6 Times&quot;, IF ( SVMXC__NoOfTimesScheduled__c &lt;= 10, &quot;6 to 10 Times&quot;, &quot;Over 10 Times&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of times the work order was scheduled bucket. This is used for reporting purpose.</inlineHelpText>
        <label>Number Of Times Scheduled Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Onsite_Response_Customer_By__c</fullName>
        <description>Date/time by which onsite response should be delivered as per customer commitment in SLA. Calculated automatically</description>
        <label>Onsite Response Customer By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Onsite_Response_Internal_By__c</fullName>
        <description>Date/time by which customer should be onsite responsed as per internal commitment in SLA.</description>
        <inlineHelpText>Date/time by which customer should be onsite responsed as per internal commitment in SLA.</inlineHelpText>
        <label>Onsite Response Internal By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__OptiMax_Error_Email1__c</fullName>
        <description>Email address copied from global settings. Can be used to send pre-calculation failures</description>
        <label>OptiMax Error Email1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMXC__OptiMax_Error_Email2__c</fullName>
        <description>Email address copied from dispatch process. Can be used to send pre-calculation failures</description>
        <label>OptiMax Error Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMXC__OptiMax_Error_Occurred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if an error occurred when performing pre-calculations for OptiMax</description>
        <label>OptiMax Error Occurred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__OptiMax_Error_Text__c</fullName>
        <description>Details of error occurred when performing pre-calculations for OptiMax</description>
        <label>OptiMax Error Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__OptiMax_Last_Run_Time__c</fullName>
        <description>Last time the work order processed by OptiMax</description>
        <label>OptiMax Last Run Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__OptiMax_Status__c</fullName>
        <description>OptiMax dispatch status for the work order</description>
        <label>OptiMax Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Optimizer_Connection_Name__c</fullName>
        <description>This field stores the Connection Instance Name.</description>
        <label>Optimizer Connection Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Order_Status__c</fullName>
        <description>Current status of the service order</description>
        <inlineHelpText>Current status of the service order</inlineHelpText>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Order Received</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Complete</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Order_Type__c</fullName>
        <description>Type of service order: Field Service, Depot repair etc.</description>
        <inlineHelpText>Type of service order: Field Service, Depot repair etc.</inlineHelpText>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Depot Repair</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                    <default>true</default>
                    <label>Field Service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__PM_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The source PM plan that resulted in this preventive maintenance work order. Set by PM scheduler</description>
        <label>Preventive Maintenance Plan</label>
        <referenceTo>SVMXC__PM_Plan__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__PM_SC__c</fullName>
        <description>Service Contract for which this preventive maintenance work order was created.</description>
        <formula>SVMXC__PM_Plan__r.SVMXC__Service_Contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Service Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__PM_Tasks_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if PM tasks have been created</description>
        <label>PM Tasks Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account, set by trigger.</description>
        <inlineHelpText>Lookup to Partner Account.</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders (Partner Account)</relationshipLabel>
        <relationshipName>Service_Order_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Contact, set by trigger.</description>
        <inlineHelpText>Lookup to Partner Contact.</inlineHelpText>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Orders (Partner Contact)</relationshipLabel>
        <relationshipName>Service_Order_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Perform_Auto_Entitlement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Perform Auto Entitlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Preferred Business Hours</description>
        <label>Preferred Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_End_Time__c</fullName>
        <description>End time before which the work order must be scheduled. Calculated automatically based on booking window, SLA and access hours</description>
        <label>Preferred End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Resource_Priority__c</fullName>
        <description>Preferred Resource Priority is used in OptiMax to indicate the priority of assigning the work order to the Preferred Technician.</description>
        <label>Preferred Resource Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Start_Time__c</fullName>
        <description>Start time for the work order to be scheduled. Calculated automatically based on booking window, SLA and access hours</description>
        <label>Preferred Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the preferred technician for the work order. Calculated from service contract, installed product or account wherever available</description>
        <label>Preferred Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Work Orders (Preferred Technician)</relationshipLabel>
        <relationshipName>Service_Order_Pref_Tech</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Previous_Scheduled_Date_Time__c</fullName>
        <description>Holds the previous Scheduled Date Time of the work order, if the work order had been scheduled previously.</description>
        <label>Previous Scheduled Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Primary_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary territory for the work order. Calculated automatically by OptiMax pre-calculation engine</description>
        <label>Primary Territory</label>
        <referenceTo>SVMXC__Territory__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Priority__c</fullName>
        <description>Priority of the service order</description>
        <inlineHelpText>Priority of the service order</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Problem_Description__c</fullName>
        <description>Detailed description of the problem as reported by the customer</description>
        <inlineHelpText>Detailed description of the problem as reported by the customer</inlineHelpText>
        <label>Problem Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product in which specialization would be required to service the work order. Calculated from installed product by OptiMax pre-calculation engine</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Proforma_Invoice_Amount__c</fullName>
        <description>Total Amount which is invoiced to the customer for the work performed.</description>
        <inlineHelpText>Total Amount which is invoiced to the customer for the work performed.</inlineHelpText>
        <label>Proforma Invoice Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Proforma_Invoice__c</fullName>
        <label>Proforma Invoice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Purpose_of_Visit__c</fullName>
        <description>If the Order Type is Field Service, specific reason for the field visit.</description>
        <inlineHelpText>If the Order Type is Field Service, specific reason for the field visit.</inlineHelpText>
        <label>Purpose of Visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Deinstallation</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Courtesy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__QTL_Status__c</fullName>
        <label>QTL Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified Technician List Computed</fullName>
                </value>
                <value>
                    <fullName>No Qualified Technicians (Allow)</fullName>
                </value>
                <value>
                    <fullName>No Qualified Technicians (Disallow)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Qualified_Technicians__c</fullName>
        <label>Qualified Technicians</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Rate_Pricing_Rule__c</fullName>
        <label>Rate (Pricing Rule)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Rate_Type_Pricing_Rule__c</fullName>
        <label>Rate Type (Pricing Rule)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>NTE</fullName>
                </value>
                <value>
                    <fullName>Minimum</fullName>
                </value>
                <value>
                    <fullName>Surcharge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Related_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Related_Work_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Resolution_Customer_By__c</fullName>
        <description>Date/time by which work order should be resolved as per customer commitment in SLA. Calculated automatically</description>
        <label>Resolution Customer By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Resolution_Internal_By__c</fullName>
        <description>Date/time by which customer should be resolved as per internal commitment in SLA.</description>
        <inlineHelpText>Date/time by which customer should be resolved as per internal commitment in SLA.</inlineHelpText>
        <label>Resolution Internal By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Restoration_Customer_By__c</fullName>
        <description>Date/time by which customer should be restored as per customer commitment in SLA. Calculated automatically</description>
        <label>Restoration Customer By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Restoration_Internal_By__c</fullName>
        <description>Date/time by which customer should be restored as per internal commitment in SLA.</description>
        <inlineHelpText>Date/time by which customer should be restored as per internal commitment in SLA.</inlineHelpText>
        <label>Restoration Internal By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Root_Cause__c</fullName>
        <description>Root cause of the failure.</description>
        <inlineHelpText>Root cause of the failure.</inlineHelpText>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Value1</fullName>
                </value>
                <value>
                    <fullName>Sample Value2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SESSION_ID__c</fullName>
        <description>Not used</description>
        <formula>$Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SESSION_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Extension_Minutes__c</fullName>
        <label>SLA Clock Extension Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Days__c</fullName>
        <label>SLA Clock Pause Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Hours__c</fullName>
        <label>SLA Clock Pause Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Minutes__c</fullName>
        <label>SLA Clock Pause Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Reason__c</fullName>
        <label>SLA Clock Pause Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>